--- a/rmd/EDA.Rmd
+++ b/rmd/EDA.Rmd
@@ -34,12 +34,15 @@ opts_knit$set(width=75)
 ```{r package, message=FALSE}
 library(tidyverse)
 library(summarytools) # summary easily for EDA
+library(feather)
 ```
 
 ## Load funciton
 
-```{r}
+- csv fileをfeather fileにする.
 
+```{r}
+# source('~/Desktop/Elo_kaggle/script/convert_to_feather.R')
 ```
 
 ## ggplot themes
@@ -59,29 +62,13 @@ theme_set(theme_classic(base_size = 18,base_family = "Helvetica")) # 英語用
 - Convert charcter's columns into factor's columns 
 - Delete duplicate column names and change them to lower case
 
-```{r cache=TRUE}
-# 訓練データ, テストデータ
-train <- read_csv("~/Desktop/Elo_kaggle/input/raw/train.csv",
-                  na = c("XNA","NA","","NaN","?")) %>% 
-  mutate_if(is.character, funs(factor(.))) 
-test <- read_csv("~/Desktop/Elo_kaggle/input/raw/test.csv",
-                  na = c("XNA","NA","","NaN","?")) %>% 
-  mutate_if(is.character, funs(factor(.))) 
-# 取引情報データ
-transactions <- read_csv("~/Desktop/Elo_kaggle/input/raw/historical_transactions.csv",
-                         na = c("XNA","NA","","NaN","?")) %>% 
-  mutate_if(is.character, funs(factor(.))) 
-new_transactions <- read_csv("~/Desktop/Elo_kaggle/input/raw/new_merchant_transactions.csv",
-                             na = c("XNA","NA","","NaN","?")) %>% 
-  mutate_if(is.character, funs(factor(.))) 
-# 加盟店情報
-merchants <- read_csv("~/Desktop/Elo_kaggle/input/raw/merchants.csv",
-                      na = c("XNA","NA","","NaN","?")) %>% 
-  mutate_if(is.character, funs(factor(.))) 
-# サブミットファイル
-sample_submit <- read_csv("~/Desktop/Elo_kaggle/input/raw/sample_submission.csv",
-                          na = c("XNA","NA","","NaN","?")) %>% 
-  mutate_if(is.character, funs(factor(.))) 
+```{r}
+train <- read_feather("~/Desktop/Elo_kaggle/input/processed/train.feather")
+test <- read_feather("~/Desktop/Elo_kaggle/input/feather/test.feather")
+transactions <- read_feather("~/Desktop/Elo_kaggle/input/feather/historical_transactions.feather")
+new_transactions <- read_feather("~/Desktop/Elo_kaggle/input/feather/new_merchant_transactions.feather")
+merchants <- read_feather("~/Desktop/Elo_kaggle/input/feather/merchants.feather")
+sample_submit <- read_feather("~/Desktop/Elo_kaggle/input/feather/sample_submission.feather")
 ```
 
 # EDA{.tabset .tabset-fade .tabset-pills}
