add Ridge regression

--- a/jn/Kaggle_kernel_tunguz.ipynb
+++ b/jn/Kaggle_kernel_tunguz.ipynb
@@ -969,6 +969,150 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## モデル"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ridge 回帰"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np # linear algebra\n",
+    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+    "import feather\n",
+    "from sklearn.linear_model import Ridge\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.metrics import mean_squared_error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "201917 observations and 121 features in train set.\n",
+      "123623 observations and 119 features in test set.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Loading Train and Test Data\n",
+    "train = feather.read_dataframe(\"../input/processed/train_20181223.feather\")\n",
+    "test = feather.read_dataframe(\"../input/processed/test_20181223.feather\")\n",
+    "print(\"{} observations and {} features in train set.\".format(train.shape[0],train.shape[1]))\n",
+    "print(\"{} observations and {} features in test set.\".format(test.shape[0],test.shape[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data set\n",
+    "target = train['target']\n",
+    "del train['target']\n",
+    "features = [c for c in train.columns if c not in ['card_id', 'outliers']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fold n°1\n",
+      "fold n°2\n",
+      "fold n°3\n",
+      "fold n°4\n",
+      "fold n°5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5.193616750433414"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# model\n",
+    "## predict data box\n",
+    "val_pred_ridge = np.zeros(train.shape[0])\n",
+    "test_pred_ridge = np.zeros(test.shape[0])\n",
+    "## make test data\n",
+    "test_data = test.copy()\n",
+    "test_data.fillna((test_data.mean()), inplace=True)\n",
+    "test_data = test_data[features].values\n",
+    "## 5-クロスバリデーション\n",
+    "folds = StratifiedKFold(n_splits=5, shuffle=True, random_state=15)\n",
+    "## 実行\n",
+    "# 外れ値のあたいを考慮して, データを分割する\n",
+    "for fold_, (trn_idx, val_idx) in enumerate(folds.split(train,train['outliers'].values)):\n",
+    "    print(\"fold n°{}\".format(fold_+1))\n",
+    "    trn_data, trn_y = train.iloc[trn_idx][features], target.iloc[trn_idx].values\n",
+    "    val_data, val_y = train.iloc[val_idx][features], target.iloc[val_idx].values\n",
+    "    \n",
+    "    trn_data.fillna((trn_data.mean()), inplace=True)\n",
+    "    val_data.fillna((val_data.mean()), inplace=True)\n",
+    "    \n",
+    "    trn_data = trn_data.values\n",
+    "    val_data = val_data.values\n",
+    "    # fitting model for train data\n",
+    "    clf = Ridge(alpha=100)\n",
+    "    clf.fit(trn_data, trn_y)\n",
+    "    # predicting validation data and predicting data\n",
+    "    val_pred_ridge[val_idx] = clf.predict(val_data)\n",
+    "    test_pred_ridge += clf.predict(test_data) / folds.n_splits\n",
+    "\n",
+    "# np.save('validation_ridge', val_pred_ridge)\n",
+    "# np.save('predictions_ridge', test_pred_ridge)\n",
+    "np.sqrt(mean_squared_error(target.values, val_pred_ridge))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<enumerate at 0x117300f78>"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.save('predictions_ridge', test_pred_ridge)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
