research light gbm code

--- a/jn/Kaggle_kernel_tunguz.ipynb
+++ b/jn/Kaggle_kernel_tunguz.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# xgboostについてはpathを設定する必要がある\n",
     "import sys\n",
-    "sys.path.append('/Users/takuto/.pyenv/versions/3.6.5/lib/python3.6/site-packages/xgboost-0.81-py3.6.egg')\n",
+    "# sys.path.append('/Users/takuto/.pyenv/versions/3.6.5/lib/python3.6/site-packages/xgboost-0.81-py3.6.egg')\n",
     "# sys.path.append('/Users/takuto/.pyenv/versions/3.6.5/lib/python3.6/site-packages')"
    ]
   },
@@ -1094,18 +1094,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<enumerate at 0x117300f78>"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-accf876f790b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'predictions_ridge'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_pred_ridge\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
     }
    ],
    "source": [
@@ -1113,11 +1114,97 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Boosting method and stacking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Light GBM"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def read_data(train_name,test_name,features_name):\n",
+    "  #Loading Train and Test Data\n",
+    "  Base = \"/Users/takuto/Desktop/Elo_kaggle/input/processed/\"\n",
+    "  train = feather.read_dataframe(Base + train_name + \".feather\")\n",
+    "  test = feather.read_dataframe(Base + test_name + \".feather\")\n",
+    "  features = feather.read_dataframe(Base + features_name + \".feather\")\n",
+    "  # check data frame\n",
+    "  print(\"{} observations and {} features in train set.\".format(train.shape[0],train.shape[1]))\n",
+    "  print(\"{} observations and {} features in test set.\".format(test.shape[0],test.shape[1]))\n",
+    "  print(\"{} observations and {} features in features set.\".format(features.shape[0],features.shape[1]))\n",
+    "  # transform\n",
+    "  target = train['target']; del train['target'] # data set\n",
+    "  features = features[\"feature\"].tolist() # features list\n",
+    "  return train, test, features, target\n",
+    "def submit(predict,tech):\n",
+    "  # make submit file\n",
+    "  submit_file = feather.read_dataframe(\"/Users/takuto/Desktop/Elo_kaggle/input/feather/sample_submission.feather\")\n",
+    "  submit_file[\"target\"] = predict\n",
+    "  # save for output/(technic name + datetime + .csv)\n",
+    "  file_name = '/Users/takuto/Desktop/Elo_kaggle/output/' + tech + datetime.now().strftime(\"%Y%m%d\") + \".csv\"\n",
+    "  submit_file.to_csv(file_name, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read data\n",
+    "train_name = \"train_20181223\"; test_name = \"test_20181223\"; features_name = \"features_20181223\";\n",
+    "train, test, features, target = read_data(train_name,test_name,features_name)\n",
+    "# param\n",
+    "param = {'num_leaves': 31,\n",
+    "           'min_data_in_leaf': 30, \n",
+    "           'objective':'regression',\n",
+    "           'max_depth': -1,\n",
+    "           'learning_rate': 0.01,\n",
+    "           \"min_child_samples\": 20,\n",
+    "           \"boosting\": \"gbdt\",\n",
+    "           \"feature_fraction\": 0.9,\n",
+    "           \"bagging_freq\": 1,\n",
+    "           \"bagging_fraction\": 0.9 ,\n",
+    "           \"bagging_seed\": 11,\n",
+    "           \"metric\": 'rmse',\n",
+    "           \"lambda_l1\": 0.1,\n",
+    "           \"verbosity\": -1,\n",
+    "           \"nthread\": 4,\n",
+    "           \"random_state\": 831}\n",
+    "# model         \n",
+    "oof_lgb = np.zeros(len(train))\n",
+    "predictions_lgb = np.zeros(len(test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## k-stratified k-Fold\n",
+    "folds = Validation(5)\n",
+    "for fold_, (trn_idx, val_idx) in enumerate(folds.split(train,train['outliers'].values)):    \n",
+    "    print('-'); print(\"Fold {}\".format(fold_ + 1));\n",
+    "    trn_data = lgb.Dataset(train.iloc[trn_idx][features], label=target.iloc[trn_idx])\n",
+    "    val_data = lgb.Dataset(train.iloc[val_idx][features], label=target.iloc[val_idx])\n",
+    "\n",
+    "    num_round = 10000\n",
+    "    clf = lgb.train(param, trn_data, num_round, valid_sets = [trn_data, val_data], verbose_eval=100, early_stopping_rounds=200)\n",
+    "    oof_lgb[val_idx] = clf.predict(train.iloc[val_idx][features], num_iteration=clf.best_iteration)\n",
+    "    predictions_lgb += clf.predict(test[features], num_iteration=clf.best_iteration) / folds.n_splits"
+   ]
   }
  ],
  "metadata": {
