--- a/jn/main.ipynb
+++ b/jn/main.ipynb
@@ -19,8 +19,9 @@
     "import pandas as pd # data processing\n",
     "import feather # fast reading data\n",
     "from datetime import datetime\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "from Regressor import Ridge_Regressor, Lasso_Regressor, Bagging_Regressor\n",
-    "from sklearn.metrics import mean_squared_error"
+    "from Boosting import Lightgbm_Regressor\n"
    ]
   },
   {
@@ -78,7 +79,8 @@
       "201917 observations and 121 features in train set.\n",
       "123623 observations and 119 features in test set.\n",
       "118 observations and 1 features in features set.\n",
-      "fold n°1\n"
+      "fold n°1\n",
+      "fold n°2\n"
      ]
     }
    ],
@@ -116,6 +118,23 @@
     "submit(test_pred_ridge,\"Ridge\")\n",
     "submit(test_pred_lasso,\"Lasso\")\n",
     "submit(test_pred_bag,\"Bagging\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Boosting method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read file\n",
+    "train_name = \"train_20181223\"; test_name = \"test_20181223\"; features_name = \"features_20181223\";"
    ]
   }
  ],
