change directory setting

--- a/jn/Kaggle_kernel_tunguz.ipynb
+++ b/jn/Kaggle_kernel_tunguz.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,38 +1129,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def read_data(train_name,test_name,features_name):\n",
-    "  #Loading Train and Test Data\n",
-    "  Base = \"/Users/takuto/Desktop/Elo_kaggle/input/processed/\"\n",
-    "  train = feather.read_dataframe(Base + train_name + \".feather\")\n",
-    "  test = feather.read_dataframe(Base + test_name + \".feather\")\n",
-    "  features = feather.read_dataframe(Base + features_name + \".feather\")\n",
-    "  # check data frame\n",
-    "  print(\"{} observations and {} features in train set.\".format(train.shape[0],train.shape[1]))\n",
-    "  print(\"{} observations and {} features in test set.\".format(test.shape[0],test.shape[1]))\n",
-    "  print(\"{} observations and {} features in features set.\".format(features.shape[0],features.shape[1]))\n",
-    "  # transform\n",
-    "  target = train['target']; del train['target'] # data set\n",
-    "  features = features[\"feature\"].tolist() # features list\n",
-    "  return train, test, features, target\n",
-    "def submit(predict,tech):\n",
-    "  # make submit file\n",
-    "  submit_file = feather.read_dataframe(\"/Users/takuto/Desktop/Elo_kaggle/input/feather/sample_submission.feather\")\n",
-    "  submit_file[\"target\"] = predict\n",
-    "  # save for output/(technic name + datetime + .csv)\n",
-    "  file_name = '/Users/takuto/Desktop/Elo_kaggle/output/' + tech + datetime.now().strftime(\"%Y%m%d\") + \".csv\"\n",
-    "  submit_file.to_csv(file_name, index=False)"
+    "home_path = '/Users/takutokotsubo' # for imac\n",
+    "# home_path = '/Users/takuto' # for air"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "def read_data(train_name,test_name,features_name):\n",
+    "    #Loading Train and Test Data\n",
+    "    Base = home_path + \"/Desktop/Elo_kaggle/input/processed/\"\n",
+    "    train = feather.read_dataframe(Base + train_name + \".feather\")\n",
+    "    test = feather.read_dataframe(Base + test_name + \".feather\")\n",
+    "    features = feather.read_dataframe(Base + features_name + \".feather\")\n",
+    "    # check data frame\n",
+    "    print(\"{} observations and {} features in train set.\".format(train.shape[0],train.shape[1]))\n",
+    "    print(\"{} observations and {} features in test set.\".format(test.shape[0],test.shape[1]))\n",
+    "    print(\"{} observations and {} features in features set.\".format(features.shape[0],features.shape[1]))\n",
+    "    # transform\n",
+    "    target = train['target']; del train['target'] # data set\n",
+    "    features = features[\"feature\"].tolist() # features list\n",
+    "    return train, test, features, target\n",
+    "def submit(predict,tech):\n",
+    "    # make submit file\n",
+    "    submit_file = feather.read_dataframe(home_path + \"/Desktop/Elo_kaggle/input/feather/sample_submission.feather\")\n",
+    "    submit_file[\"target\"] = predict\n",
+    "    # save for output/(technic name + datetime + .csv)\n",
+    "    file_name = home_path + '/Desktop/Elo_kaggle/output/' + tech + datetime.now().strftime(\"%Y%m%d\") + \".csv\"\n",
+    "    submit_file.to_csv(file_name, index=False)\n",
+    "def Validation(k):\n",
+    "    return StratifiedKFold(n_splits=k, shuffle=True, random_state=15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "201917 observations and 121 features in train set.\n",
+      "123623 observations and 119 features in test set.\n",
+      "118 observations and 1 features in features set.\n"
+     ]
+    }
+   ],
    "source": [
     "# read data\n",
     "train_name = \"train_20181223\"; test_name = \"test_20181223\"; features_name = \"features_20181223\";\n",
@@ -1191,7 +1213,80 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-\n",
+      "Fold 1\n",
+      "Training until validation scores don't improve for 200 rounds.\n",
+      "[100]\ttraining's rmse: 3.72831\tvalid_1's rmse: 3.76372\n",
+      "[200]\ttraining's rmse: 3.66104\tvalid_1's rmse: 3.73313\n",
+      "[300]\ttraining's rmse: 3.61343\tvalid_1's rmse: 3.71834\n",
+      "[400]\ttraining's rmse: 3.5796\tvalid_1's rmse: 3.70967\n",
+      "[500]\ttraining's rmse: 3.55119\tvalid_1's rmse: 3.70473\n",
+      "[600]\ttraining's rmse: 3.52793\tvalid_1's rmse: 3.70173\n",
+      "[700]\ttraining's rmse: 3.50684\tvalid_1's rmse: 3.69931\n",
+      "[800]\ttraining's rmse: 3.4888\tvalid_1's rmse: 3.69751\n",
+      "[900]\ttraining's rmse: 3.47215\tvalid_1's rmse: 3.69656\n",
+      "[1000]\ttraining's rmse: 3.45746\tvalid_1's rmse: 3.69531\n",
+      "[1100]\ttraining's rmse: 3.44267\tvalid_1's rmse: 3.69429\n",
+      "[1200]\ttraining's rmse: 3.42944\tvalid_1's rmse: 3.69399\n",
+      "[1300]\ttraining's rmse: 3.41582\tvalid_1's rmse: 3.69384\n",
+      "[1400]\ttraining's rmse: 3.40251\tvalid_1's rmse: 3.69344\n",
+      "[1500]\ttraining's rmse: 3.39017\tvalid_1's rmse: 3.69317\n",
+      "[1600]\ttraining's rmse: 3.37822\tvalid_1's rmse: 3.69312\n",
+      "[1700]\ttraining's rmse: 3.36583\tvalid_1's rmse: 3.69309\n",
+      "Early stopping, best iteration is:\n",
+      "[1523]\ttraining's rmse: 3.38741\tvalid_1's rmse: 3.69293\n",
+      "-\n",
+      "Fold 2\n",
+      "Training until validation scores don't improve for 200 rounds.\n",
+      "[100]\ttraining's rmse: 3.72034\tvalid_1's rmse: 3.77952\n",
+      "[200]\ttraining's rmse: 3.65351\tvalid_1's rmse: 3.75211\n",
+      "[300]\ttraining's rmse: 3.60702\tvalid_1's rmse: 3.73684\n",
+      "[400]\ttraining's rmse: 3.57233\tvalid_1's rmse: 3.72683\n",
+      "[500]\ttraining's rmse: 3.5444\tvalid_1's rmse: 3.72067\n",
+      "[600]\ttraining's rmse: 3.52168\tvalid_1's rmse: 3.71708\n",
+      "[700]\ttraining's rmse: 3.50147\tvalid_1's rmse: 3.71426\n",
+      "[800]\ttraining's rmse: 3.48258\tvalid_1's rmse: 3.71266\n",
+      "[900]\ttraining's rmse: 3.46592\tvalid_1's rmse: 3.7108\n",
+      "[1000]\ttraining's rmse: 3.45021\tvalid_1's rmse: 3.70963\n",
+      "[1100]\ttraining's rmse: 3.43588\tvalid_1's rmse: 3.70892\n",
+      "[1200]\ttraining's rmse: 3.42203\tvalid_1's rmse: 3.70865\n",
+      "[1300]\ttraining's rmse: 3.4083\tvalid_1's rmse: 3.70797\n",
+      "[1400]\ttraining's rmse: 3.39497\tvalid_1's rmse: 3.70725\n",
+      "[1500]\ttraining's rmse: 3.3834\tvalid_1's rmse: 3.7069\n",
+      "[1600]\ttraining's rmse: 3.3709\tvalid_1's rmse: 3.70647\n",
+      "[1700]\ttraining's rmse: 3.35901\tvalid_1's rmse: 3.70638\n",
+      "[1800]\ttraining's rmse: 3.34826\tvalid_1's rmse: 3.70623\n",
+      "[1900]\ttraining's rmse: 3.33705\tvalid_1's rmse: 3.7062\n",
+      "[2000]\ttraining's rmse: 3.32634\tvalid_1's rmse: 3.70596\n",
+      "[2100]\ttraining's rmse: 3.3161\tvalid_1's rmse: 3.70605\n",
+      "[2200]\ttraining's rmse: 3.30546\tvalid_1's rmse: 3.7055\n",
+      "[2300]\ttraining's rmse: 3.29483\tvalid_1's rmse: 3.70538\n",
+      "[2400]\ttraining's rmse: 3.28471\tvalid_1's rmse: 3.70529\n",
+      "[2500]\ttraining's rmse: 3.27382\tvalid_1's rmse: 3.70523\n",
+      "[2600]\ttraining's rmse: 3.26323\tvalid_1's rmse: 3.70519\n",
+      "[2700]\ttraining's rmse: 3.25342\tvalid_1's rmse: 3.70485\n",
+      "[2800]\ttraining's rmse: 3.24356\tvalid_1's rmse: 3.70502\n",
+      "[2900]\ttraining's rmse: 3.23297\tvalid_1's rmse: 3.70499\n",
+      "Early stopping, best iteration is:\n",
+      "[2743]\ttraining's rmse: 3.249\tvalid_1's rmse: 3.70473\n",
+      "-\n",
+      "Fold 3\n",
+      "Training until validation scores don't improve for 200 rounds.\n",
+      "[100]\ttraining's rmse: 3.7277\tvalid_1's rmse: 3.75418\n",
+      "[200]\ttraining's rmse: 3.66223\tvalid_1's rmse: 3.72385\n",
+      "[300]\ttraining's rmse: 3.61678\tvalid_1's rmse: 3.70877\n",
+      "[400]\ttraining's rmse: 3.58111\tvalid_1's rmse: 3.70033\n",
+      "[500]\ttraining's rmse: 3.55262\tvalid_1's rmse: 3.69483\n",
+      "[600]\ttraining's rmse: 3.53045\tvalid_1's rmse: 3.69198\n",
+      "[700]\ttraining's rmse: 3.50991\tvalid_1's rmse: 3.68972\n"
+     ]
+    }
+   ],
    "source": [
     "## k-stratified k-Fold\n",
     "folds = Validation(5)\n",
@@ -1205,6 +1300,13 @@
     "    oof_lgb[val_idx] = clf.predict(train.iloc[val_idx][features], num_iteration=clf.best_iteration)\n",
     "    predictions_lgb += clf.predict(test[features], num_iteration=clf.best_iteration) / folds.n_splits"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1212,18 +1314,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
