--- a/jn/Kaggle_kernel_tunguz.ipynb
+++ b/jn/Kaggle_kernel_tunguz.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
     "import time\n",
     "from sklearn import preprocessing\n",
     "import warnings\n",
-    "import datetime\n",
+    "from datetime import datetime\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "import gc\n",
     "from tqdm import tqdm\n",
@@ -1139,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,66 @@
       "[400]\ttraining's rmse: 3.58111\tvalid_1's rmse: 3.70033\n",
       "[500]\ttraining's rmse: 3.55262\tvalid_1's rmse: 3.69483\n",
       "[600]\ttraining's rmse: 3.53045\tvalid_1's rmse: 3.69198\n",
-      "[700]\ttraining's rmse: 3.50991\tvalid_1's rmse: 3.68972\n"
+      "[700]\ttraining's rmse: 3.50991\tvalid_1's rmse: 3.68972\n",
+      "[800]\ttraining's rmse: 3.49139\tvalid_1's rmse: 3.68822\n",
+      "[900]\ttraining's rmse: 3.47378\tvalid_1's rmse: 3.68679\n",
+      "[1000]\ttraining's rmse: 3.45764\tvalid_1's rmse: 3.68591\n",
+      "[1100]\ttraining's rmse: 3.44265\tvalid_1's rmse: 3.68592\n",
+      "[1200]\ttraining's rmse: 3.4282\tvalid_1's rmse: 3.68572\n",
+      "[1300]\ttraining's rmse: 3.4145\tvalid_1's rmse: 3.68553\n",
+      "[1400]\ttraining's rmse: 3.4009\tvalid_1's rmse: 3.68555\n",
+      "[1500]\ttraining's rmse: 3.38774\tvalid_1's rmse: 3.68585\n",
+      "Early stopping, best iteration is:\n",
+      "[1344]\ttraining's rmse: 3.40808\tvalid_1's rmse: 3.68521\n",
+      "-\n",
+      "Fold 4\n",
+      "Training until validation scores don't improve for 200 rounds.\n",
+      "[100]\ttraining's rmse: 3.72658\tvalid_1's rmse: 3.76834\n",
+      "[200]\ttraining's rmse: 3.65797\tvalid_1's rmse: 3.73959\n",
+      "[300]\ttraining's rmse: 3.611\tvalid_1's rmse: 3.72586\n",
+      "[400]\ttraining's rmse: 3.57752\tvalid_1's rmse: 3.71784\n",
+      "[500]\ttraining's rmse: 3.55041\tvalid_1's rmse: 3.7131\n",
+      "[600]\ttraining's rmse: 3.52693\tvalid_1's rmse: 3.70959\n",
+      "[700]\ttraining's rmse: 3.50675\tvalid_1's rmse: 3.70716\n",
+      "[800]\ttraining's rmse: 3.48738\tvalid_1's rmse: 3.7047\n",
+      "[900]\ttraining's rmse: 3.47105\tvalid_1's rmse: 3.70356\n",
+      "[1000]\ttraining's rmse: 3.45531\tvalid_1's rmse: 3.70294\n",
+      "[1100]\ttraining's rmse: 3.44162\tvalid_1's rmse: 3.70271\n",
+      "[1200]\ttraining's rmse: 3.42813\tvalid_1's rmse: 3.70261\n",
+      "[1300]\ttraining's rmse: 3.41494\tvalid_1's rmse: 3.70277\n",
+      "[1400]\ttraining's rmse: 3.40233\tvalid_1's rmse: 3.70272\n",
+      "Early stopping, best iteration is:\n",
+      "[1231]\ttraining's rmse: 3.42427\tvalid_1's rmse: 3.70246\n",
+      "-\n",
+      "Fold 5\n",
+      "Training until validation scores don't improve for 200 rounds.\n",
+      "[100]\ttraining's rmse: 3.72703\tvalid_1's rmse: 3.76975\n",
+      "[200]\ttraining's rmse: 3.65941\tvalid_1's rmse: 3.73884\n",
+      "[300]\ttraining's rmse: 3.61399\tvalid_1's rmse: 3.72433\n",
+      "[400]\ttraining's rmse: 3.57919\tvalid_1's rmse: 3.71631\n",
+      "[500]\ttraining's rmse: 3.55051\tvalid_1's rmse: 3.71062\n",
+      "[600]\ttraining's rmse: 3.5259\tvalid_1's rmse: 3.70713\n",
+      "[700]\ttraining's rmse: 3.50537\tvalid_1's rmse: 3.70452\n",
+      "[800]\ttraining's rmse: 3.48757\tvalid_1's rmse: 3.70272\n",
+      "[900]\ttraining's rmse: 3.47153\tvalid_1's rmse: 3.70182\n",
+      "[1000]\ttraining's rmse: 3.45633\tvalid_1's rmse: 3.70094\n",
+      "[1100]\ttraining's rmse: 3.44138\tvalid_1's rmse: 3.70045\n",
+      "[1200]\ttraining's rmse: 3.42754\tvalid_1's rmse: 3.70001\n",
+      "[1300]\ttraining's rmse: 3.41375\tvalid_1's rmse: 3.69964\n",
+      "[1400]\ttraining's rmse: 3.40131\tvalid_1's rmse: 3.69928\n",
+      "[1500]\ttraining's rmse: 3.38854\tvalid_1's rmse: 3.6991\n",
+      "[1600]\ttraining's rmse: 3.37666\tvalid_1's rmse: 3.69856\n",
+      "[1700]\ttraining's rmse: 3.36528\tvalid_1's rmse: 3.69829\n",
+      "[1800]\ttraining's rmse: 3.35407\tvalid_1's rmse: 3.69813\n",
+      "[1900]\ttraining's rmse: 3.34263\tvalid_1's rmse: 3.69791\n",
+      "[2000]\ttraining's rmse: 3.33127\tvalid_1's rmse: 3.69786\n",
+      "[2100]\ttraining's rmse: 3.31966\tvalid_1's rmse: 3.69777\n",
+      "[2200]\ttraining's rmse: 3.30863\tvalid_1's rmse: 3.69763\n",
+      "[2300]\ttraining's rmse: 3.29763\tvalid_1's rmse: 3.69733\n",
+      "[2400]\ttraining's rmse: 3.2869\tvalid_1's rmse: 3.69742\n",
+      "[2500]\ttraining's rmse: 3.27674\tvalid_1's rmse: 3.69741\n",
+      "Early stopping, best iteration is:\n",
+      "[2343]\ttraining's rmse: 3.29296\tvalid_1's rmse: 3.6973\n"
      ]
     }
    ],
@@ -1299,6 +1358,34 @@
     "    clf = lgb.train(param, trn_data, num_round, valid_sets = [trn_data, val_data], verbose_eval=100, early_stopping_rounds=200)\n",
     "    oof_lgb[val_idx] = clf.predict(train.iloc[val_idx][features], num_iteration=clf.best_iteration)\n",
     "    predictions_lgb += clf.predict(test[features], num_iteration=clf.best_iteration) / folds.n_splits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# とりあえずsubmit \n",
+    "submit(predictions_lgb, \"lightgbm\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CV score: 3.69653 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# cv score\n",
+    "print(\"CV score: {:<8.5f}\".format(mean_squared_error(oof_lgb, target)**0.5))"
    ]
   },
   {
