--- a/jn/main.ipynb
+++ b/jn/main.ipynb
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,10 @@
       "123623 observations and 119 features in test set.\n",
       "118 observations and 1 features in features set.\n",
       "fold n°1\n",
-      "fold n°2\n"
+      "fold n°2\n",
+      "fold n°3\n",
+      "fold n°4\n",
+      "fold n°5\n"
      ]
     }
    ],
@@ -98,25 +101,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bagging regression validation RMSE: 3.7892\n"
+     ]
+    }
+   ],
    "source": [
     "# print validation RMSE \n",
-    "print(\"Ridge regression validation RMSE: %.4f\" % np.sqrt(mean_squared_error(target.values, val_pred_ridge)))\n",
-    "print(\"Lasso regression validation RMSE: %.4f\" % np.sqrt(mean_squared_error(target.values, val_pred_lasso)))\n",
+    "#print(\"Ridge regression validation RMSE: %.4f\" % np.sqrt(mean_squared_error(target.values, val_pred_ridge)))\n",
+    "#print(\"Lasso regression validation RMSE: %.4f\" % np.sqrt(mean_squared_error(target.values, val_pred_lasso)))\n",
     "print(\"Bagging regression validation RMSE: %.4f\" % np.sqrt(mean_squared_error(target.values, val_pred_bag)))  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# submit file\n",
-    "submit(test_pred_ridge,\"Ridge\")\n",
-    "submit(test_pred_lasso,\"Lasso\")\n",
+    "#submit(test_pred_ridge,\"Ridge\")\n",
+    "#submit(test_pred_lasso,\"Lasso\")\n",
     "submit(test_pred_bag,\"Bagging\")"
    ]
   },
